--- a/Martify/WebAssets/YetiAnimatedLogin/index.html
+++ b/Martify/WebAssets/YetiAnimatedLogin/index.html
@@ -112,10 +112,6 @@
 							<path fill="#fff" stroke="#3a5e77" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M278.2 59.3l-18.6-10 2.5 11.9-10.7 6.5 9.9 8.7-13.9 6.4 9.1 5.9-13.2 9.2 23.1-.9M284.5 100.1c-.4 4 1.8 8.9 6.7 14.8 3.5-1.8 6.7-3.6 9.7-5.5 1.8 4.2 5.1 8.9 10.1 14.1 2.7-2.1 5.1-4.4 7.1-6.8 4.1 3.4 9 7 14.7 11 1.2-3.4 1.8-7 1.7-10.9M314 66.7s5.4-5.7 12.6-7.4c1.7 2.9 3.3 5.7 4.9 8.6 3.8-2.5 9.8-4.4 18.2-5.7.1 3.1.1 6.1 0 9.2 5.5-1 12.5-1.6 20.8-1.9-1.4 3.9-2.5 8.4-2.5 8.4" />
 						</g>
 					</g>
-
-
-
-
 				</svg>
 			</div>
 		</div>
@@ -140,13 +136,19 @@
 			<label for="loginPassword" id="loginPasswordLabel"></label>
 			<input type="password" id="loginPassword" required placeholder=" " />
 			<label>Mật khẩu</label>
-		</div>
 
-		<label id="showPasswordToggle" for="showPasswordCheck">
-			Show
-			<input id="showPasswordCheck" type="checkbox" />
-			<div class="indicator"></div>
-		</label>
+			<div class="toggle-password" id="togglePasswordBtn" style="cursor: pointer; color: #555; display: none;">
+				<svg class="eye-slash" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+					<path d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"></path>
+					<line x1="1" y1="1" x2="23" y2="23"></line>
+				</svg>
+
+				<svg class="eye-open" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="display: none;">
+					<path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+					<circle cx="12" cy="12" r="3"></circle>
+				</svg>
+			</div>
+		</div>
 
 		<div class="inputGroup">
 			<button id="login" class="material-login-btn">Login</button>
