--- a/Martify/WebAssets/YetiAnimatedLogin/index.html
+++ b/Martify/WebAssets/YetiAnimatedLogin/index.html
@@ -5,9 +5,8 @@
 	<title>Yeti Animated Login</title>
 	<link rel="stylesheet"
 		  href="style.css">
-	<script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
-	<script src="https://unpkg.com/gsap@3/dist/MorphSVGPlugin.min.js"></script>
-	<script src="https://unpkg.com/gsap@3/dist/gsap-legacy.min.js"></script>
+	<script src="libs/gsap.min.js"></script>
+	<script src="libs/MorphSVGPlugin.min.js"></script>
 </head>
 
 <body>
