ui: update loading animation effect

--- a/Martify/WebAssets/YetiAnimatedLogin/index.html
+++ b/Martify/WebAssets/YetiAnimatedLogin/index.html
@@ -13,6 +13,7 @@
 
 	<div id="loading-screen">
 		<span class="loader"></span>
+		<p style="font-family: 'Times New Roman', sans-serif;">Vui lòng chờ...</p>
 	</div>
 
 	<form novalidate>
