fix(ui): chỉnh sửa wording trường đăng nhập

--- a/Martify/WebAssets/YetiAnimatedLogin/index.html
+++ b/Martify/WebAssets/YetiAnimatedLogin/index.html
@@ -332,7 +332,7 @@
 				   id="loginEmail"
 				   required
 				   placeholder=" " />
-			<label>Email hoặc tên người dùng</label>
+			<label>Tên đăng nhập</label>
 		</div>
 
 		<div class="inputGroup material-input">
